Details
-
Bug
-
Resolution: Fixed
-
P0: Blocker
-
6.8
-
None
-
-
4ba30f4c1 (dev), 6cb6e4a75 (6.8), b9c6f4c37 (6.8.1)
Description
With latest meta-qt6(6.8.1) submodule update, Boot to Qt build fails for several targets (imx* + others). ERROR as follows:
09:40:46 | /home/qt/work/build/tmp/work/cortexa53-crypto-mx8mm-poky-linux/qtmultimedia/6.8.1/git/src/plugins/multimedia/gstreamer/common/qgstreamermediaplayer.cpp:231:49: error: cannot convert 'QUniqueHandle<QGstImpl::QUniqueGstStructureHandleTraits>::Type' {aka '_GstStructure*'} to 'GstPlay*' {aka '_GstPlay*'} 09:40:46 | 231 | gst_play_config_set_seek_accurate(config.get(), true); 09:40:46 | | ~~~~~~~~~~^~ 09:40:46 | | | 09:40:46 | | QUniqueHandle<QGstImpl::QUniqueGstStructureHandleTraits>::Type {aka _GstStructure*} 09:40:46 | In file included from /home/qt/work/build/tmp/work/cortexa53-crypto-mx8mm-poky-linux/qtmultimedia/6.8.1/git/src/plugins/multimedia/gstreamer/common/qgstreamermediaplayer_p.h:31, 09:40:46 | from /home/qt/work/build/tmp/work/cortexa53-crypto-mx8mm-poky-linux/qtmultimedia/6.8.1/git/src/plugins/multimedia/gstreamer/common/qgstreamermediaplayer.cpp:4: 09:40:46 | /home/qt/work/build/tmp/work/cortexa53-crypto-mx8mm-poky-linux/qtmultimedia/6.8.1/recipe-sysroot/usr/include/gstreamer-1.0/gst/play/gstplay.h:380:61: note: initializing argument 1 of 'void gst_play_config_set_seek_accurate(GstPlay*, gboolean)' 09:40:46 | 380 | void gst_play_config_set_seek_accurate (GstPlay * play, gboolean accurate); 09:40:46 | | ~~~~~~~~~~^~~~
Looks like issue comes after QTBUG-129107 changes.
Attachments
For Gerrit Dashboard: QTBUG-131300 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
605371,8 | GStreamer: work around for broken gstreamer on meta-freescale | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
605782,2 | GStreamer: work around for broken gstreamer on meta-freescale | 6.8 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
605931,2 | GStreamer: work around for broken gstreamer on meta-freescale | 6.8.1 | qt/qtmultimedia | Status: MERGED | +2 | 0 |