GStreamer: work around for broken gstreamer on meta-freescale

NXP decided to revert to a version of the gst_play API before it was
deemed stable.

Fixes: QTBUG-131300
Pick-to: 6.8.1
Change-Id: I55680bf4a553a5fa1acff8a2652449724ba26c84
Reviewed-by: Tim Blechmann <tim.blechmann@qt.io>
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>
(cherry picked from commit 4ba30f4c1df2796bc7ba1efdd61cef3364b42fbe)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>